--- a/nextcloud2/app.cfg
+++ b/nextcloud2/app.cfg
@@ -22,7 +22,7 @@ spec:
   fullDescription: Nextcloud puts your data at your fingertips, under your control. Store your documents, calendar, contacts and photos on a server at home, at one of our providers or in a data center you trust.Features:Mobile and desktop sync，Versioning and undelete，Galleries and activity feed，File editing and preview support for PDF, images, text files, Open Document, Word files and more.，Smooth performance and easy user interface.，Fine-grained control over access to data and sharing capabilities by user and by group.
   upgradeDescription: This version is for test
   subCategory: Private Cloud
-  developer: 
+  developer: Nextcloud GmbH
   requiredMemory: 64Mi
   requiredDisk: 128Mi
   requiredCpu: 250m
